; ModuleID = '/home/carl/AnghaBench/libgit2/tests/path/extr_core.c_test_path_core__isvalid_backslash.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/path/extr_core.c_test_path_core__isvalid_backslash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"foo\\file.txt\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"foo/bar\\file.txt\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"foo/bar\\\00", align 1
@GIT_PATH_REJECT_BACKSLASH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_path_core__isvalid_backslash() #0 {
  %1 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 0, i32 0)
  %2 = call i32 @cl_assert_equal_b(i32 1, i32 %1)
  %3 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 0)
  %4 = call i32 @cl_assert_equal_b(i32 1, i32 %3)
  %5 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 0)
  %6 = call i32 @cl_assert_equal_b(i32 1, i32 %5)
  %7 = load i32, i32* @GIT_PATH_REJECT_BACKSLASH, align 4
  %8 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 0, i32 %7)
  %9 = call i32 @cl_assert_equal_b(i32 0, i32 %8)
  %10 = load i32, i32* @GIT_PATH_REJECT_BACKSLASH, align 4
  %11 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 0, i32 %10)
  %12 = call i32 @cl_assert_equal_b(i32 0, i32 %11)
  %13 = load i32, i32* @GIT_PATH_REJECT_BACKSLASH, align 4
  %14 = call i32 @git_path_isvalid(i32* null, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 %13)
  %15 = call i32 @cl_assert_equal_b(i32 0, i32 %14)
  ret void
}

declare dso_local i32 @cl_assert_equal_b(i32, i32) #1

declare dso_local i32 @git_path_isvalid(i32*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
